kubernetes/argocd_cluster02/config/boutique-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boutique
  labels:
    istio-injection: "enabled"
