kubernetes/argocd_cluster02/config/boutique-app/peerauthentication-frontend.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: frontend-permissive
  namespace: boutique
spec:
  selector:
    matchLabels:
      app: frontend
  mtls:
    mode: PERMISSIVE
