kubernetes/argocd_cluster02/config/boutique-app/adservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
  namespace: boutique
spec:
  replicas: 2
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      containers:
        - name: adservice
          image: gcr.io/google-samples/microservices-demo/adservice:v0.8.0
          ports:
            - containerPort: 9555
