kubernetes/argocd_cluster02/config/boutique-app/emailservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
  namespace: boutique
spec:
  replicas: 2
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      containers:
        - name: emailservice
          image: gcr.io/google-samples/microservices-demo/emailservice:v0.8.0
          ports:
            - containerPort: 8080
