kubernetes/argocd_cluster02/config/boutique-app/loadgenerator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
  namespace: boutique
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadgenerator
  template:
    metadata:
      labels:
        app: loadgenerator
    spec:
      containers:
        - name: main
          image: gcr.io/google-samples/microservices-demo/loadgenerator:v0.8.0
