kubernetes/argocd_cluster02/config/boutique-app/recommendationservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
  namespace: boutique
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recommendationservice
  template:
    metadata:
      labels:
        app: recommendationservice
    spec:
      containers:
        - name: recommendationservice
          image: gcr.io/google-samples/microservices-demo/recommendationservice:v0.8.0
          ports:
            - containerPort: 8080
