kubernetes/argocd_cluster02/config/boutique-app/redis-cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart
  namespace: boutique
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cart
  template:
    metadata:
      labels:
        app: redis-cart
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
