kubernetes/argocd_cluster02/config/boutique-app/adservice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: adservice
  namespace: boutique
spec:
  selector:
    app: adservice
  ports:
    - port: 9555
      targetPort: 9555
