kubernetes/argocd_cluster02/config/boutique-app/checkoutservice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
  namespace: boutique
spec:
  selector:
    app: checkoutservice
  ports:
    - port: 5050
      targetPort: 5050
