kubernetes/argocd_cluster02/config/boutique-app/currencyservice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
  namespace: boutique
spec:
  selector:
    app: currencyservice
  ports:
    - port: 7000
      targetPort: 7000
