kubernetes/argocd_cluster02/config/boutique-app/emailservice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: emailservice
  namespace: boutique
spec:
  selector:
    app: emailservice
  ports:
    - port: 8080
      targetPort: 8080
