kubernetes/argocd_cluster02/config/boutique-app/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-active
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-preview
  namespace: boutique
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 8080
