kubernetes/argocd_cluster02/config/boutique-app/paymentservice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  namespace: boutique
spec:
  selector:
    app: paymentservice
  ports:
    - port: 50051
      targetPort: 50051
