kubernetes/argocd_cluster02/config/boutique-app/productcatalog-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: productcatalog
  namespace: boutique
spec:
  selector:
    app: productcatalog
  ports:
    - port: 3550
      targetPort: 3550
