kubernetes/argocd_cluster02/config/boutique-app/recommendationservice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
  namespace: boutique
spec:
  selector:
    app: recommendationservice
  ports:
    - port: 8080
      targetPort: 8080
