kubernetes/argocd_cluster02/config/boutique-app/redis-cart-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
  namespace: boutique
spec:
  selector:
    app: redis-cart
  ports:
    - port: 6379
      targetPort: 6379
