kubernetes/argocd_cluster02/config/boutique-app/shippingservice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
  namespace: boutique
spec:
  selector:
    app: shippingservice
  ports:
    - port: 50051
      targetPort: 50051
