kubernetes/argocd_cluster02/config/boutique-app/destinationrules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: adservice
  namespace: boutique
spec:
  host: adservice.boutique.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cartservice
  namespace: boutique
spec:
  host: cartservice.boutique.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: checkoutservice
  namespace: boutique
spec:
  host: checkoutservice.boutique.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: currencyservice
  namespace: boutique
spec:
  host: currencyservice.boutique.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: emailservice
  namespace: boutique
spec:
  host: emailservice.boutique.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: paymentservice
  namespace: boutique
spec:
  host: paymentservice.boutique.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productcatalog
  namespace: boutique
spec:
  host: productcatalog.boutique.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: recommendationservice
  namespace: boutique
spec:
  host: recommendationservice.boutique.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shippingservice
  namespace: boutique
spec:
  host: shippingservice.boutique.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: redis-cart
  namespace: boutique
spec:
  host: redis-cart.boutique.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
