kubernetes/argocd_cluster02/config/boutique-app/frontend-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: boutique-gateway
  namespace: boutique
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    external-dns.alpha.kubernetes.io/hostname: boutique.dublinconsulting.com.br
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - boutique.dublinconsulting.com.br
      tls:
        httpsRedirect: false
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - boutique.dublinconsulting.com.br
      tls:
        mode: SIMPLE
        secretName: boutique-tls
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: boutique
spec:
  hosts:
    - boutique.dublinconsulting.com.br
  gateways:
    - boutique-gateway
  http:
    - route:
        - destination:
            host: frontend-active.boutique.svc.cluster.local
            port:
              number: 80
